--- a/fangyuandialog.ui
+++ b/fangyuandialog.ui
@@ -29,13 +29,7 @@
         <property name="text">
          <string>房屋编号</string>
         </property>
-        <property name="buddy">
-         <cstring>fangwuBianhaoLineEdit</cstring>
-        </property>
        </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="fangwuBianhaoLineEdit"/>
       </item>
       <item row="0" column="2">
        <widget class="QLabel" name="label_3">
@@ -43,12 +37,12 @@
          <string>房源类型</string>
         </property>
         <property name="buddy">
-         <cstring>fangwuLeixingComboBox</cstring>
+         <cstring>fangyuanLeixingComboBox</cstring>
         </property>
        </widget>
       </item>
       <item row="0" column="3">
-       <widget class="QComboBox" name="fangwuLeixingComboBox">
+       <widget class="QComboBox" name="fangyuanLeixingComboBox">
         <item>
          <property name="text">
           <string>出售</string>
@@ -130,6 +124,9 @@
         </property>
        </spacer>
       </item>
+      <item row="0" column="1">
+       <widget class="QSpinBox" name="fangwuBianhaoSpinBox"/>
+      </item>
      </layout>
     </widget>
    </item>
@@ -170,21 +167,12 @@
         <property name="text">
          <string>房屋价格</string>
         </property>
-        <property name="buddy">
-         <cstring>fangwuJiageLineEdit</cstring>
-        </property>
        </widget>
-      </item>
-      <item row="0" column="4">
-       <widget class="QLineEdit" name="fangwuJiageLineEdit"/>
       </item>
       <item row="0" column="5">
        <widget class="QLabel" name="label_16">
         <property name="text">
          <string>元</string>
-        </property>
-        <property name="buddy">
-         <cstring>fangwuJiageLineEdit</cstring>
         </property>
        </widget>
       </item>
@@ -194,12 +182,12 @@
          <string>房屋类型</string>
         </property>
         <property name="buddy">
-         <cstring>fangwuLeiXingComboBox</cstring>
+         <cstring>fangwuLeixingComboBox</cstring>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QComboBox" name="fangwuLeiXingComboBox">
+       <widget class="QComboBox" name="fangwuLeixingComboBox">
         <item>
          <property name="text">
           <string>1室</string>
@@ -491,6 +479,9 @@
       </item>
       <item row="4" column="4" colspan="2">
        <widget class="QLineEdit" name="jutiDizhiLineEdit"/>
+      </item>
+      <item row="0" column="4">
+       <widget class="QSpinBox" name="fangwuJiageSpinBox"/>
       </item>
      </layout>
     </widget>
