--- a/keyuandialog.ui
+++ b/keyuandialog.ui
@@ -29,13 +29,7 @@
         <property name="text">
          <string>客户编号</string>
         </property>
-        <property name="buddy">
-         <cstring>kehuBianhaoLineEdit</cstring>
-        </property>
        </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="kehuBianhaoLineEdit"/>
       </item>
       <item row="0" column="2">
        <widget class="QLabel" name="label_3">
@@ -130,6 +124,9 @@
         </property>
        </spacer>
       </item>
+      <item row="0" column="1">
+       <widget class="QSpinBox" name="kehuBianhaoSpinBox"/>
+      </item>
      </layout>
     </widget>
    </item>
@@ -170,21 +167,12 @@
         <property name="text">
          <string>房屋价格</string>
         </property>
-        <property name="buddy">
-         <cstring>fangwuJiageLineEdit</cstring>
-        </property>
        </widget>
-      </item>
-      <item row="0" column="4">
-       <widget class="QLineEdit" name="fangwuJiageLineEdit"/>
       </item>
       <item row="0" column="5">
        <widget class="QLabel" name="label_16">
         <property name="text">
          <string>元</string>
-        </property>
-        <property name="buddy">
-         <cstring>fangwuJiageLineEdit</cstring>
         </property>
        </widget>
       </item>
@@ -522,6 +510,9 @@
       </item>
       <item row="4" column="4" colspan="2">
        <widget class="QLineEdit" name="yixiangDizhiLineEdit"/>
+      </item>
+      <item row="0" column="4">
+       <widget class="QSpinBox" name="fangwuJiageSpinBox"/>
       </item>
      </layout>
     </widget>
