--- a/keyuandialog.ui
+++ b/keyuandialog.ui
@@ -182,12 +182,12 @@
          <string>房屋类型</string>
         </property>
         <property name="buddy">
-         <cstring>fangwuLeiXingComboBox</cstring>
+         <cstring>fangwuLeixingComboBox</cstring>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QComboBox" name="fangwuLeiXingComboBox">
+       <widget class="QComboBox" name="fangwuLeixingComboBox">
         <item>
          <property name="text">
           <string>1室</string>
