--- a/qianyuechengjiaodialog.ui
+++ b/qianyuechengjiaodialog.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>407</width>
     <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>签约成交</string>
   </property>
   <property name="windowIcon">
    <iconset resource="main.qrc">
